Refactor UserListPage to use local user data, implement add, edit, and delete functionalities, and update localization strings. Adjust User and UserFilter components for improved user management experience.

--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -99,9 +99,10 @@
   
   "userManagement": "مدیریت کاربران",
   "addUser": "افزودن کاربر",
+  "edit": "ویرایش",
   "searchUsers": "جستجوی کاربران",
   "allRoles": "همه نقش‌ها",
-  "allStatus": "همه وضعیت‌ها",
+  "allStatuses": "همه وضعیت‌ها",
   "name": "نام",
   "role": "نقش",
   "lastLogin": "آخرین ورود",
