به‌روزرسانی آیکون‌ها و متون در داشبوردهای آنالیز و بازاریابی؛ تغییر نام آیکون‌ها به آمار کاربران، بازدیدها، کمپین‌ها و نرخ تبدیل. همچنین، افزودن گزینه‌های جدید به نوار کناری برای دسترسی به صفحات جدید. به‌روزرسانی متون محلی برای پشتیبانی از ویژگی‌های جدید.

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -7,7 +7,7 @@
   "stocks": "Stocks",
   "saas": "SaaS",
   "calendar": "Calendar",
-  "profile": "User Profile",
+  "profile": "Profile",
   "task": "Task",
   "list": "List",
   "kanban": "Kanban",
@@ -51,7 +51,6 @@
   "dropdowns": "Dropdowns",
   "images": "Images",
   "links": "Links",
-  "list": "List",
   "modals": "Modals",
   "notifications": "Notifications",
   "pagination": "Pagination",
@@ -66,7 +65,7 @@
   "signIn": "Sign In",
   "signUp": "Sign Up",
   "resetPassword": "Reset Password",
-  "twoStepVerification": "Two-Step Verification",
+  "twoStepVerification": "Two Step Verification",
   "customers": "Customers",
   "orders": "Orders",
   "monthlySales": "Monthly Sales",
@@ -91,7 +90,7 @@
   "overview": "Overview",
   "sales": "Sales",
   "variants": "Variants",
-  "menu": "MENU",
+  "menu": "Menu",
   "search": "Search...",
   "targetForEachMonth": "Target you've set for each month",
   "goodWork": "You earn $3287 today, it's higher than last month. Keep up your good work!",
@@ -100,9 +99,10 @@
   
   "userManagement": "User Management",
   "addUser": "Add User",
+  "edit": "Edit",
   "searchUsers": "Search Users",
   "allRoles": "All Roles",
-  "allStatus": "All Status",
+  "allStatuses": "All Statuses",
   "name": "Name",
   "role": "Role",
   "lastLogin": "Last Login",
@@ -113,5 +113,33 @@
   "Inactive": "Inactive",
   "Admin": "Admin",
   "Editor": "Editor",
-  "Viewer": "Viewer"
+  "Viewer": "Viewer",
+
+  "users": "Users",
+  "sessions": "Sessions",
+  "pageViews": "Page Views",
+  "bounceRate": "Bounce Rate",
+  "analyticsOverview": "Analytics Overview",
+  "websiteTraffic": "Website Traffic",
+  "trafficSources": "Traffic Sources",
+  "sourceBreakdown": "Source breakdown",
+  "organic": "Organic",
+  "direct": "Direct",
+  "social": "Social",
+  "referral": "Referral",
+  "other": "Other",
+  "month": "Month",
+  "year": "Year",
+  
+  "activeCampaigns": "Active Campaigns",
+  "leads": "Leads",
+  "roi": "ROI",
+  "conversionRate": "Conversion Rate",
+  "marketingDashboard": "Marketing Dashboard",
+  "marketingOverview": "Marketing Overview",
+  "campaignPerformance": "Campaign Performance",
+  "topChannels": "Top Channels",
+  "bestPerformingChannels": "Best performing channels",
+  "seo": "SEO",
+  "ppc": "PPC"
 } 
