--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -113,5 +113,33 @@
   "Inactive": "غیرفعال",
   "Admin": "مدیر",
   "Editor": "ویرایشگر",
-  "Viewer": "بیننده"
+  "Viewer": "بیننده",
+
+  "users": "کاربران",
+  "sessions": "جلسات",
+  "pageViews": "بازدید صفحات",
+  "bounceRate": "نرخ پرش",
+  "analyticsOverview": "نمای کلی آمار",
+  "websiteTraffic": "ترافیک وب سایت",
+  "trafficSources": "منابع ترافیک",
+  "sourceBreakdown": "جزئیات منابع ترافیک",
+  "organic": "ارگانیک",
+  "direct": "مستقیم",
+  "social": "شبکه‌های اجتماعی",
+  "referral": "ارجاعی",
+  "other": "سایر",
+  "month": "ماه",
+  "year": "سال",
+  
+  "activeCampaigns": "کمپین‌های فعال",
+  "leads": "سرنخ‌ها",
+  "roi": "بازگشت سرمایه",
+  "conversionRate": "نرخ تبدیل",
+  "marketingDashboard": "داشبورد بازاریابی",
+  "marketingOverview": "نمای کلی بازاریابی",
+  "campaignPerformance": "عملکرد کمپین",
+  "topChannels": "کانال‌های برتر",
+  "bestPerformingChannels": "کانال‌های با بهترین عملکرد",
+  "seo": "بهینه‌سازی موتور جستجو",
+  "ppc": "تبلیغات کلیکی"
 } 
